--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import cred2 from "../images/credentials2.webp";
 	<!-- Banner -->
 	<section id="banner">
 		<div class="logo">
-			<Image src={logoHappy} alt="Logo Happy Tail Grooming" width="400" />
+			<Image src={logoHappy} alt="Logo Happy Tail Grooming" width="450" />
 		</div>
 		<!-- <h2>Happy Tail Grooming</h2> -->
 		<p>
@@ -63,7 +63,6 @@ import cred2 from "../images/credentials2.webp";
 
 		<section class="box special">
 			<header class="major">
-
 				<h2>Catherine Toro</h2>
 				<h2>Owner / Founder & Professional Dog Groomer</h2>
 				<p>
@@ -126,8 +125,8 @@ import cred2 from "../images/credentials2.webp";
 					</figure>
 					<h3>North Carolina</h3>
 					<p>
-						Ballantine, Pineville, Waxhaw, Piper Glen, Matthews,
-						Providence and Indian Trail.
+						Ballantine, Pineville, Waxhaw, Piper Glen, Matthews and
+						Providence.
 					</p>
 				</section>
 			</div>
