--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -20,23 +20,27 @@ import alacarte from "../images/a-la-carte.webp";
 
          <div class="features-row">
             <section>
+               <span class="image"> <Image src={fullbath} alt="" /></span>
+            </section>
+
+            <section>
                <h3>Full Bath & Brush</h3>
 
                <ul class="paw">
-                  <li><i class="fa-solid fa-paw"></i>Massage bath</li>
-                  <li><i class="fa-solid fa-paw"></i>Facial wash</li>
+                  <li><i class="fa-solid fa-bone"></i>Massage bath</li>
+                  <li><i class="fa-solid fa-bone"></i>Facial wash</li>
                   <li>
-                     <i class="fa-solid fa-paw"></i>Hand blow out, brush out and
-                     de-shedding if needed
+                     <i class="fa-solid fa-bone"></i>Hand blow out, brush out
+                     and de-shedding if needed
                   </li>
-                  <li><i class="fa-solid fa-paw"></i>Nail clipper and file</li>
+                  <li><i class="fa-solid fa-bone"></i>Nail clipper and file</li>
                   <li>
-                     <i class="fa-solid fa-paw"></i>Ear cleaning (Ear plucking
+                     <i class="fa-solid fa-bone"></i>Ear cleaning (Ear plucking
                      is not include)
                   </li>
-                  <li><i class="fa-solid fa-paw"></i>Teeth brush</li>
-                  <li><i class="fa-solid fa-paw"></i>Cologne</li>
-                  <li><i class="fa-solid fa-paw"></i>Bandana or hair bows</li>
+                  <li><i class="fa-solid fa-bone"></i>Teeth brush</li>
+                  <li><i class="fa-solid fa-bone"></i>Cologne</li>
+                  <li><i class="fa-solid fa-bone"></i>Bandana or hair bows</li>
                </ul>
 
                <div class="prices">
@@ -45,10 +49,6 @@ import alacarte from "../images/a-la-carte.webp";
                   <p>Large dog (40 - 59 lbs) Starting at $120</p>
                   <p>Extra Large dog (Over 60 lbs) Starting at $145</p>
                </div>
-            </section>
-
-            <section>
-               <span class="image"> <Image src={fullbath} alt="" /></span>
             </section>
          </div>
 
@@ -59,24 +59,24 @@ import alacarte from "../images/a-la-carte.webp";
             <section>
                <h3>Partial Groom</h3>
                <ul class="paw">
-                  <li><i class="fa-solid fa-paw"></i>Massage bath</li>
-                  <li><i class="fa-solid fa-paw"></i>Facial wash</li>
+                  <li><i class="fa-solid fa-bone"></i>Massage bath</li>
+                  <li><i class="fa-solid fa-bone"></i>Facial wash</li>
                   <li>
-                     <i class="fa-solid fa-paw"></i>Hand blow out, brush out and
-                     de-shedding if needed
+                     <i class="fa-solid fa-bone"></i>Hand blow out, brush out
+                     and de-shedding if needed
                   </li>
-                  <li><i class="fa-solid fa-paw"></i>Nail clipper and file</li>
+                  <li><i class="fa-solid fa-bone"></i>Nail clipper and file</li>
                   <li>
-                     <i class="fa-solid fa-paw"></i>Ear cleaning (Ear plucking
+                     <i class="fa-solid fa-bone"></i>Ear cleaning (Ear plucking
                      is not include)
                   </li>
-                  <li><i class="fa-solid fa-paw"></i>Teeth brush</li>
+                  <li><i class="fa-solid fa-bone"></i>Teeth brush</li>
                   <li>
-                     <i class="fa-solid fa-paw"></i>Sanitation trim, face trim
+                     <i class="fa-solid fa-bone"></i>Sanitation trim, face trim
                      and feet trim
                   </li>
-                  <li><i class="fa-solid fa-paw"></i>Cologne</li>
-                  <li><i class="fa-solid fa-paw"></i>Bandana or hair bows</li>
+                  <li><i class="fa-solid fa-bone"></i>Cologne</li>
+                  <li><i class="fa-solid fa-bone"></i>Bandana or hair bows</li>
                </ul>
 
                <div class="prices">
@@ -90,23 +90,27 @@ import alacarte from "../images/a-la-carte.webp";
 
          <div class="features-row">
             <section>
+               <span class="image"> <Image src={fullgroom} alt="" /></span>
+            </section>
+            
+            <section>
                <h3>Full Groom (Bath & Haircut)</h3>
 
                <ul class="paw">
-                  <li><i class="fa-solid fa-paw"></i>Massage bath</li>
-                  <li><i class="fa-solid fa-paw"></i>Facial wash</li>
+                  <li><i class="fa-solid fa-bone"></i>Massage bath</li>
+                  <li><i class="fa-solid fa-bone"></i>Facial wash</li>
                   <li>
-                     <i class="fa-solid fa-paw"></i>Hand blow out, brush out and
-                     de-shedding if needed
+                     <i class="fa-solid fa-bone"></i>Hand blow out, brush out
+                     and de-shedding if needed
                   </li>
-                  <li><i class="fa-solid fa-paw"></i>Nail clipper and file</li>
+                  <li><i class="fa-solid fa-bone"></i>Nail clipper and file</li>
                   <li>
-                     <i class="fa-solid fa-paw"></i>Ear cleaning (Ear plucking
+                     <i class="fa-solid fa-bone"></i>Ear cleaning (Ear plucking
                      is not include)
                   </li>
-                  <li><i class="fa-solid fa-paw"></i>Teeth brush</li>
-                  <li><i class="fa-solid fa-paw"></i>Cologne</li>
-                  <li><i class="fa-solid fa-paw"></i>Bandana or hair bows</li>
+                  <li><i class="fa-solid fa-bone"></i>Teeth brush</li>
+                  <li><i class="fa-solid fa-bone"></i>Cologne</li>
+                  <li><i class="fa-solid fa-bone"></i>Bandana or hair bows</li>
                </ul>
 
                <div class="prices">
@@ -115,10 +119,6 @@ import alacarte from "../images/a-la-carte.webp";
                   <p>Large dog (40 - 59 lbs) Starting at $175</p>
                   <p>Extra Large dog (Over 60 lbs) Starting at $200</p>
                </div>
-            </section>
-
-            <section>
-               <span class="image"> <Image src={fullgroom} alt="" /></span>
             </section>
          </div>
 
@@ -130,23 +130,23 @@ import alacarte from "../images/a-la-carte.webp";
                <h3>Services a la Carte</h3>
                <ul class="paw">
                   <li>
-                     <i class="fa-solid fa-paw"></i>De - Matting + $15 ~ Up
+                     <i class="fa-solid fa-bone"></i>De - Matting + $15 ~ Up
                   </li>
-                  <li><i class="fa-solid fa-paw"></i>Ear Plucking $15</li>
+                  <li><i class="fa-solid fa-bone"></i>Ear Plucking $15</li>
                   <li>
-                     <i class="fa-solid fa-paw"></i>Anal Gland Expression $15
+                     <i class="fa-solid fa-bone"></i>Anal Gland Expression $15
                   </li>
                   <li>
-                     <i class="fa-solid fa-paw"></i>Specialty Shampoo
+                     <i class="fa-solid fa-bone"></i>Specialty Shampoo
                      (Hypoallergenic, whitening, flea and tick shampoo, etc) +
                      $10 ~ Up
                   </li>
                   <li>
-                     <i class="fa-solid fa-paw"></i>Soothing Paws Treatment $10
+                     <i class="fa-solid fa-bone"></i>Soothing Paws Treatment $10
                   </li>
-                  <li><i class="fa-solid fa-paw"></i>Nail Polish $15</li>
+                  <li><i class="fa-solid fa-bone"></i>Nail Polish $15</li>
                   <li>
-                     <i class="fa-solid fa-paw"></i>Ask About Coloring Services
+                     <i class="fa-solid fa-bone"></i>Ask About Coloring Services
                   </li>
                </ul>
             </section>
