--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -1,7 +1,29 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Image from "astro/components/Image.astro";
-
+import pic1 from "./../images/gallery/pic (1).jpg";
+import pic2 from "./../images/gallery/pic (2).jpg";
+import pic3 from "./../images/gallery/pic (3).jpg";
+import pic4 from "./../images/gallery/pic (4).jpg";
+import pic5 from "./../images/gallery/pic (5).jpg";
+import pic6 from "./../images/gallery/pic (6).jpg";
+import pic7 from "./../images/gallery/pic (7).jpg";
+import pic8 from "./../images/gallery/pic (8).jpg";
+import pic9 from "./../images/gallery/pic (9).jpg";
+import pic10 from "./../images/gallery/pic (10).jpg";
+import pic11 from "./../images/gallery/pic (11).jpg";
+import pic12 from "./../images/gallery/pic (12).jpg";
+import pic13 from "./../images/gallery/pic (13).jpg";
+import pic14 from "./../images/gallery/pic (14).jpg";
+import pic15 from "./../images/gallery/pic (15).jpg";
+import pic16 from "./../images/gallery/pic (16).jpg";
+import pic17 from "./../images/gallery/pic (17).jpg";
+import pic18 from "./../images/gallery/pic (18).jpg";
+import pic19 from "./../images/gallery/pic (19).jpg";
+import pic20 from "./../images/gallery/pic (20).jpg";
+import pic21 from "./../images/gallery/pic (21).jpg";
+import pic22 from "./../images/gallery/pic (22).jpg";
+import pic23 from "./../images/gallery/pic (23).jpg";
 ---
 
 <Layout title="Gallery :: Happy Tail Grooming">
@@ -12,80 +34,80 @@ import Image from "astro/components/Image.astro";
       </header>
       <div class="box gallery">
          <div class="image">
-            <img src="gallery/pic (1).jpg" alt="" />
+            <Image src={pic1} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (2).jpg" alt="" />
+            <Image src={pic2} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (3).jpg" alt="" />
+            <Image src={pic3} alt="" />
+         </div>
+
+         <div class="image">
+            <Image src={pic4} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (4).jpg" alt="" />
+            <Image src={pic5} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (5).jpg" alt="" />
+            <Image src={pic6} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (6).jpg" alt="" />
+            <Image src={pic7} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (7).jpg" alt="" />
+            <Image src={pic8} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (8).jpg" alt="" />
+            <Image src={pic9} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (9).jpg" alt="" />
+            <Image src={pic10} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (10).jpg" alt="" />
+            <Image src={pic11} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (11).jpg" alt="" />
+            <Image src={pic12} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (12).jpg" alt="" />
+            <Image src={pic13} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (13).jpg" alt="" />
+            <Image src={pic14} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (14).jpg" alt="" />
+            <Image src={pic15} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (15).jpg" alt="" />
+            <Image src={pic16} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (16).jpg" alt="" />
+            <Image src={pic17} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (17).jpg" alt="" />
+            <Image src={pic18} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (18).jpg" alt="" />
+            <Image src={pic19} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (19).jpg" alt="" />
+            <Image src={pic20} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (20).jpg" alt="" />
+            <Image src={pic21} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (21).jpg" alt="" />
+            <Image src={pic22} alt="" />
          </div>
          <div class="image">
-            <img src="gallery/pic (22).jpg" alt="" />
-         </div>
-         <div class="image">
-            <img src="gallery/pic (23).jpg" alt="" />
+            <Image src={pic23} alt="" />
          </div>
       </div>
    </section>
 </Layout>
 
 <style>
-
    .box {
       padding: 2rem;
    }
@@ -98,9 +120,9 @@ import Image from "astro/components/Image.astro";
 
    .gallery .image {
       width: 22%;
-      margin: 1rem;;
+      margin: 1rem;
    }
-   
+
    .gallery img {
       max-width: 100%;
       height: auto;
