--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -196,4 +196,16 @@ import cred2 from "../images/credentials2.webp";
 		border: 1px solid #eee;
 		border-radius: 20px;
 	}
+
+	@media (max-width: 768px) {
+
+		.logo img {
+			max-width: 300px;
+			height: auto;
+		}
+		.credentials {
+			flex-direction: column;
+			gap: 20px;
+		}
+	}
 </style>
