--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,6 +9,7 @@ import Footer from "../components/Footer.astro";
 import "@fontsource/chewy";
 import "@fontsource-variable/open-sans";
 import "../sass/main.scss";
+import "../sass/custom.scss";
 
 const isHome = Astro.url.pathname == "/";
 ---
