--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -28,7 +28,7 @@ import pic23 from "./../images/gallery/pic (23).jpg";
 
 <Layout title="Gallery :: Happy Tail Grooming">
    <!-- Main -->
-   <section id="main" class="container large">
+   <section id="main" class="container large bg-gallery">
       <header>
          <h2>Gallery</h2>
       </header>
@@ -119,7 +119,7 @@ import pic23 from "./../images/gallery/pic (23).jpg";
    }
 
    .gallery .image {
-      width: 22%;
+      width: 21%;
       margin: 1rem;
    }
 
