--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -26,7 +26,7 @@ import alacarte from "../images/a-la-carte.webp";
             <section>
                <h3>Full Bath & Brush</h3>
 
-               <ul class="paw">
+               <ul class="bone">
                   <li><i class="fa-solid fa-bone"></i>Massage bath</li>
                   <li><i class="fa-solid fa-bone"></i>Facial wash</li>
                   <li>
@@ -47,7 +47,7 @@ import alacarte from "../images/a-la-carte.webp";
                   <p>Small dog (0 - 19 lbs) Starting at $95</p>
                   <p>Medium dog (20 - 39 lbs) Starting at $105</p>
                   <p>Large dog (40 - 59 lbs) Starting at $120</p>
-                  <p>Extra Large dog (Over 60 lbs) Starting at $145</p>
+                  <p>XLarge dog (Over 60 lbs) Starting at $145</p>
                </div>
             </section>
          </div>
@@ -58,7 +58,7 @@ import alacarte from "../images/a-la-carte.webp";
             </section>
             <section>
                <h3>Partial Groom</h3>
-               <ul class="paw">
+               <ul class="bone">
                   <li><i class="fa-solid fa-bone"></i>Massage bath</li>
                   <li><i class="fa-solid fa-bone"></i>Facial wash</li>
                   <li>
@@ -83,7 +83,7 @@ import alacarte from "../images/a-la-carte.webp";
                   <p>Small dog (0 - 19 lbs) Starting at $105</p>
                   <p>Medium dog (20 - 39 lbs) Starting at $125</p>
                   <p>Large dog (40 - 59 lbs) Starting at $145</p>
-                  <p>Extra Large dog (Over 60 lbs) Starting at $165</p>
+                  <p>XLarge dog (Over 60 lbs) Starting at $165</p>
                </div>
             </section>
          </div>
@@ -92,11 +92,11 @@ import alacarte from "../images/a-la-carte.webp";
             <section>
                <span class="image"> <Image src={fullgroom} alt="" /></span>
             </section>
-            
+
             <section>
                <h3>Full Groom (Bath & Haircut)</h3>
 
-               <ul class="paw">
+               <ul class="bone">
                   <li><i class="fa-solid fa-bone"></i>Massage bath</li>
                   <li><i class="fa-solid fa-bone"></i>Facial wash</li>
                   <li>
@@ -117,7 +117,7 @@ import alacarte from "../images/a-la-carte.webp";
                   <p>Small dog (0 - 19 lbs) Starting at $120</p>
                   <p>Medium dog (20 - 39 lbs) Starting at $150</p>
                   <p>Large dog (40 - 59 lbs) Starting at $175</p>
-                  <p>Extra Large dog (Over 60 lbs) Starting at $200</p>
+                  <p>XLarge dog (Over 60 lbs) Starting at $200</p>
                </div>
             </section>
          </div>
@@ -128,7 +128,7 @@ import alacarte from "../images/a-la-carte.webp";
             </section>
             <section>
                <h3>Services a la Carte</h3>
-               <ul class="paw">
+               <ul class="bone">
                   <li>
                      <i class="fa-solid fa-bone"></i>De - Matting + $15 ~ Up
                   </li>
@@ -155,60 +155,69 @@ import alacarte from "../images/a-la-carte.webp";
 
       <section class="box">
          <div class="prices">
-            <ul>
+            <ul class="paw">
                <li>
+                  <i class="fa-solid fa-paw"></i>
                   <b>Prices:</b> All prices are subject to change based on the current
                   condition and length of the pet's coat. Excessively matted or tangled
                   coats will be subject to additional charges to correct.
-               </li>
-               <li>
-                  <b>Severe Coat Conditions and Matting:</b> For most pets with long
-                  hair or coats, if there is a severe coat condition or matting,
-                  for the pet's safety and welfare your pet will need to be clipped
-                  very short. We will shave your dog with your prior authorization.
-               </li>
-               <li>
-                  <b>Health & Safety: </b> A groomer consultation is done before
-                  each appointment. It is your responsibility to let us know of any
-                  important changes in the health of your pet have occurred since
-                  the prior visit. You will be informed if we notice anything out
-                  of the norm, (moles, skin issues, lumps, ear infection, etc.),
-                  on your pet while they are in our care.
-               </li>
-               <li>
-                  <b>Fleas / Ticks: </b>
-                  You will be charged an additional flea shampoo fee, based on the
-                  weight of your pet, if they arrive with fleas. In the event we
-                  find a tick on your pet, we will advise you of the number of ticks
-                  and locations. We will remove a small number of ticks, however
-                  in the event your pet has a large number of ticks we will direct
-                  you to take your pet to a veterinarian for treatment immediately.
-               </li>
-               <li>
-                  <b>Behavioral Issues:</b> We use treats and positive handling techniques
-                  or muzzle if your dog shows signs of aggression, to complete the
-                  requested grooming services if possible. If your pet poses a danger
-                  to our staff, we may deny services.
-               </li>
-               <li>
-                  <b>Add-on:</b> Anal glands and/or plucking of ear hair are additional
-                  services and not provided as part of a standard grooming. If you
-                  wish for your pet's anal glands expressed or ears to be plucked,
-                  please select those add-on options on our appointment form.
+
+                  <li>
+                     <i class="fa-solid fa-paw"></i>
+                     <b>Severe Coat Conditions and Matting:</b> For most pets with
+                     long hair or coats, if there is a severe coat condition or matting,
+                     for the pet's safety and welfare your pet will need to be clipped
+                     very short. We will shave your dog with your prior authorization.
+                  </li>
+                  <li>
+                     <i class="fa-solid fa-paw"></i>
+                     <b>Health & Safety: </b> A groomer consultation is done before
+                     each appointment. It is your responsibility to let us know of
+                     any important changes in the health of your pet have occurred
+                     since the prior visit. You will be informed if we notice anything
+                     out of the norm, (moles, skin issues, lumps, ear infection,
+                     etc.), on your pet while they are in our care.
+                  </li>
+                  <li>
+                     <i class="fa-solid fa-paw"></i>
+                     <b>Fleas / Ticks: </b>
+                     You will be charged an additional flea shampoo fee, based on
+                     the weight of your pet, if they arrive with fleas. In the event
+                     we find a tick on your pet, we will advise you of the number
+                     of ticks and locations. We will remove a small number of ticks,
+                     however in the event your pet has a large number of ticks we
+                     will direct you to take your pet to a veterinarian for treatment
+                     immediately.
+                  </li>
+                  <li>
+                     <i class="fa-solid fa-paw"></i>
+                     <b>Behavioral Issues:</b> We use treats and positive handling
+                     techniques or muzzle if your dog shows signs of aggression,
+                     to complete the requested grooming services if possible. If
+                     your pet poses a danger to our staff, we may deny services.
+                  </li>
+                  <li>
+                     <i class="fa-solid fa-paw"></i>
+                     <b>Add-on:</b> Anal glands and/or plucking of ear hair are additional
+                     services and not provided as part of a standard grooming. If
+                     you wish for your pet's anal glands expressed or ears to be
+                     plucked, please select those add-on options on our appointment
+                     form.
+                  </li>
                </li>
             </ul>
          </div>
       </section>
    </section>
+
+   <style>
+      .image img {
+         max-width: 100%;
+         height: auto;
+      }
+
+      .box.features .features-row section:nth-child(2n)::before {
+         background: transparent;
+      }
+   </style>
 </Layout>
-
-<style>
-   .image img {
-      max-width: 100%;
-      height: auto;
-   }
-
-   .box.features .features-row section:nth-child(2n)::before {
-      background: transparent;
-   }
-</style>
