--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -113,18 +113,42 @@ import pic23 from "./../images/gallery/pic (23).jpg";
    }
 
    .gallery {
-      display: flex;
+      /* display: flex;
       flex-wrap: wrap;
-      justify-content: center;
-   }
-
-   .gallery .image {
-      width: 21%;
-      margin: 1rem;
+      justify-content: center; */
+      column-count: 4;
+      column-gap: 10px;
    }
 
    .gallery img {
       max-width: 100%;
       height: auto;
+   }
+
+   .gallery .image {
+      /* width: 21%;
+      margin: 1rem; */
+      margin: 0;
+      display: grid;
+      grid-template-rows: 1fr auto;
+      margin-bottom: 10px;
+      break-inside: avoid;
+   }
+
+   .image > img {
+      grid-row: 1 / -1;
+      grid-column: 1;
+   }
+
+   .image a {
+      color: black;
+      text-decoration: none;
+   }
+
+   @media (max-width: 768px) {
+      .gallery {
+         column-count: 2;
+         column-gap: 5px;
+      }
    }
 </style>
