--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -6,7 +6,7 @@ import banner from "../images/banner-faq.webp";
 
 <Layout title="FAQ :: Happy Tail Grooming">
    <!-- Main -->
-   <section id="main" class="container medium bg-faq">
+   <section id="main" class="container medium bg-wave">
       <header>
          <h2>FREQUENTLY ASKED QUESTIONS</h2>
       </header>
