--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -28,7 +28,7 @@ import pic23 from "./../images/gallery/pic (23).jpg";
 
 <Layout title="Gallery :: Happy Tail Grooming">
    <!-- Main -->
-   <section id="main" class="container large bg-gallery">
+   <section id="main" class="container large bg-wave">
       <header>
          <h2>Gallery</h2>
       </header>
