--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -10,7 +10,7 @@ import alacarte from "../images/a-la-carte.webp";
 
 <Layout title="Services :: Happy Tail Grooming">
    <!-- Main -->
-   <section id="main" class="container medium">
+   <section id="main" class="container medium bg-wave">
       <header>
          <h2>Mobile Services</h2>
       </header>
