--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -590,13 +590,13 @@ input[type="radio"] {
 			content: '';
 			display: inline-block;
 			font-size: 0.8em;
-			height: (_size(element-height) * 0.75);
+			height: (_size(element-height) * 0.55);
 			left: 0;
-			line-height: (_size(element-height) * 0.75);
+			line-height: (_size(element-height) * 0.55);
 			position: absolute;
 			text-align: center;
-			top: 0;
-			width: (_size(element-height) * 0.75);
+			top: 5px;
+			width: (_size(element-height) * 0.55);
 		}
 	}
 
